maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall() {
	while(getCouleurSol() != Color.yellow) {
		gauche();
		if(!estFaceMur()) {
			avance();
		}
		else {
			droite();
			avance();
		}
	}
}
